--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -1,4 +1,3 @@
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <html>
 <head>
 
@@ -32,19 +31,19 @@
         <div class="collapse navbar-toggleable-xs" id="collapseEx">
             <!--Navbar Brand-->
             <a class="navbar-brand" href="#" target="_blank">小小康小小云</a>
-            <!--Links-->
-           <%-- <ul class="nav navbar-nav">
+           <!-- &lt;!&ndash;Links&ndash;&gt;
+             <ul class="nav navbar-nav">
                 &lt;%&ndash;<li class="nav-item active">&ndash;%&gt;
                     &lt;%&ndash;<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>&ndash;%&gt;
                 &lt;%&ndash;</li>&ndash;%&gt;
                 &lt;%&ndash;<li class="nav-item">&ndash;%&gt;
                     &lt;%&ndash;<a class="nav-link" href="#">Features</a>&ndash;%&gt;
                 &lt;%&ndash;&ndash;%&gt;
-            </ul>--%>
-            <!--Search form-->
-           <%-- <form class="form-inline">
+            </ul>
+            &lt;!&ndash;Search form&ndash;&gt;
+           <form class="form-inline">
                 <input class="form-control" type="text" placeholder="Search">
-            </form>--%>
+            </form>-->
         </div>
         <!--/.Collapse content-->
     </div>
