--- a/src/main/webapp/WEB-INF/view/taskList.html
+++ b/src/main/webapp/WEB-INF/view/taskList.html
@@ -1,11 +1,3 @@
-<%--
-  Created by IntelliJ IDEA.
-  User: LK
-  Date: 2016/8/18
-  Time: 22:04
-  To change this template use File | Settings | File Templates.
---%>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
 <html>
 <head>
     <title>任务列表</title>
@@ -24,6 +16,10 @@
 </head>
 </head>
 <body>
-
+    [#if list??]
+    111
+    [#else]
+    222
+    [/#if]
 </body>
 </html>
